--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Antonio Rodríguez",
   "license": "ISC",
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.4",
     "@shopify/app-bridge-react": "^1.20.1",
     "@shopify/koa-shopify-auth": "^3.1.58",
     "@shopify/koa-shopify-graphql-proxy": "^3.3.1",
@@ -18,14 +19,21 @@
     "@shopify/polaris": "^4.16.1",
     "@zeit/next-css": "^1.0.1",
     "apollo-boost": "^0.4.7",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-link-http": "^1.5.17",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "graphql": "^14.6.0",
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.1",
     "koa": "^2.11.0",
+    "koa-bodyparser": "^4.3.0",
+    "koa-respond": "^2.1.0",
     "koa-router": "^8.0.8",
     "koa-session": "^5.13.1",
     "next": "^9.3.2",
+    "node-fetch": "^2.6.0",
     "react": "^16.13.1",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.13.1",
